# appalhack_2026

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  flake.nix  index.html  meson.build  package.json  vite.config.js
.github/workflows/: deploy.yml
docs/: index.html
docs/models/stylized_campfire/: license.txt
nix-packages/: camp-client.nix  dev-shell.nix
public/: index.html
src/: main.cpp  main.js  meson.build  state.js
src/scene/: camera.js  lighting.js  loggers.js  models.js  particles.js  postProcessing.js
src/style/: main.css
src/ui/: chat.js  downloadMenu.js  panelUtils.js  seedMenu.js  settingsMenu.js  textExtension.js
